[project]
name = "letta-starter"
version = "0.1.0"
description = "A minimal Letta starter with persistent agent memory and Nebius Token Factory inference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "letta-client>=1.11.0,<2.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "rich>=13.9.0,<15.0.0",
]

[tool.uv]
package = false
